--- a/src/snippets/Automation.html
+++ b/src/snippets/Automation.html
@@ -19,7 +19,7 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Workflow Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
-            The home of all things data on the Vue platform.
+         
           </p>
         </div>
       </a>
@@ -51,7 +51,7 @@
               <!-- Nested List Begins Here -->
               <ul style="margin-left: 20px; list-style-type: circle;">
                 <li><a href="/Content-Manager/concepts">Concepts</a></li>
-                <li><a href="/Connectors-Manager/">User Guides</a></li>
+                <li><a href="">Coming soon</a></li>
            
               </ul>
             </li>
