--- a/src/snippets/Automation.html
+++ b/src/snippets/Automation.html
@@ -19,7 +19,7 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Workflow Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
-         
+            Create and manage workflows through Vue’s all new low-code-no-code Workflow Manager. Once workflows are built, use the Job Manager to run these workflows and to see the results.
           </p>
         </div>
       </a>
