--- a/src/snippets/data.html
+++ b/src/snippets/data.html
@@ -19,6 +19,7 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Data set Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
+            Vue provides you with the ability to upload and use datasets in your workflows. Oftentimes, document processing workflows also result in generation of large datasets that are difficult to keep a track of. 
           </p>
         </div>
       </a>
@@ -30,6 +31,7 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Document Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
+            With Vue’s Document Manager, you will be able to process documents, extract information from them and use them in subsequent workflows
           </p>
         </div>
       </a>
