--- a/src/snippets/sdks.html
+++ b/src/snippets/sdks.html
@@ -19,6 +19,8 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Digital-Experience-Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
+            Digital Experience Manager isn’t just a tool; it’s your ally for automating workflows seamlessly in merchandising, eCommerce, and marketing operations. 
+
           </p>
         </div>
       </a>
@@ -30,6 +32,7 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Audience Hub</div>
           <p class="mb-0 text-left text-sm text-text-400">
+            Audience Manager allows for creation of user segments (each called an audience) that can then be used both within the Vue platform (for personalized experiences) and outside - by exporting these segments to any other destination (including Marketing Automation platforms).
           </p>
         </div>
       </a>
