--- a/src/snippets/sdks.html
+++ b/src/snippets/sdks.html
@@ -17,7 +17,7 @@
 
         </div>
         <div class="flex flex-col items-start justify-start gap-1">
-          <div class="text-base font-semibold">Digital-Experience-Manager</div>
+          <div class="text-base font-semibold">Digital Experience Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
             Digital Experience Manager isn’t just a tool; it’s your ally for automating workflows seamlessly in merchandising, eCommerce, and marketing operations. 
 
