--- a/src/snippets/Automation.html
+++ b/src/snippets/Automation.html
@@ -17,13 +17,13 @@
 
         </div>
         <div class="flex flex-col items-start justify-start gap-1">
-          <div class="text-base font-semibold">Content Manager</div>
+          <div class="text-base font-semibold">Workflow Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
             Create and manage workflows through Vue’s all new low-code-no-code Workflow Manager. Once workflows are built, use the Job Manager to run these workflows and to see the results.
           </p>
         </div>
       </a>
-      <a data-dropdown-sdks-menu="mobile" onfocus="document.body.setAttribute('data-sdk-menu', 'mobile')"
+      <!-- <a data-dropdown-sdks-menu="mobile" onfocus="document.body.setAttribute('data-sdk-menu', 'mobile')"
         onmouseover="document.body.setAttribute('data-sdk-menu', 'mobile')"
         class="flex cursor-pointer items-start justify-start gap-2 border-none bg-transparent text-black dark:text-white"
         href="/Data-set">
@@ -46,7 +46,7 @@
             Customer Hub acts as a single repository of all customer data that is on the Vue platform
           </p>
         </div>
-      </a>
+      </a> -->
    
    
     </div>
@@ -64,7 +64,7 @@
               <!-- Nested List Begins Here -->
               <ul style="margin-left: 20px; list-style-type: circle;">
                 <li><a href="/Content-Manager/concepts">Concepts</a></li>
-                <li><a href="/Content-Manager">User Guide</a></li>
+                <li><a href="/">User Guide</a></li>
            
               </ul>
             </li>
