--- a/src/snippets/data.html
+++ b/src/snippets/data.html
@@ -19,7 +19,7 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Content Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
-            Create and manage workflows through Vue’s all new low-code-no-code Workflow Manager. Once workflows are built, use the Job Manager to run these workflows and to see the results.
+            Content Manager enables you to create and manage different types of catalogs by ingesting data from various data sources, processing these and making them available for applications
           </p>
         </div>
       </a>
@@ -31,7 +31,7 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Dataset Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
-            Customer Hub acts as a single repository of all customer data that is on the Vue platform
+            Vue provides you with the ability to upload and use datasets in your workflows. Oftentimes, document processing workflows also result in generation of large datasets that are difficult to keep a track of. 
           </p>
         </div>
       </a>
@@ -43,8 +43,7 @@
         <div class="flex flex-col items-start justify-start gap-1">
           <div class="text-base font-semibold">Document Manager</div>
           <p class="mb-0 text-left text-sm text-text-400">
-            Customer Hub acts as a single repository of all customer data that is on the Vue platform
-          </p>
+            With Vue’s Document Manager, you will be able to process documents, extract information from them and use them in subsequent workflows.          </p>
         </div>
       </a>
    
