--- a/src/snippets/Account.html
+++ b/src/snippets/Account.html
@@ -67,21 +67,21 @@
     </p>
   </div>
 </a>
-  <!-- <a data-dropdown-sdks-menu="integrate" onfocus="document.body.setAttribute('data-sdk-menu', 'integrate')"
+   <a data-dropdown-sdks-menu="integrate" onfocus="document.body.setAttribute('data-sdk-menu', 'integrate')"
     onmouseover="document.body.setAttribute('data-sdk-menu', 'integrate')"
     class="flex cursor-pointer items-start justify-start gap-2 border-none bg-transparent text-black dark:text-white"
-    href="/Integration/Embed Code">
+    href="/SSO">
     <div class="flex-shrink-0">
 
     </div>
     <div class="flex flex-col items-start justify-start gap-1">
-      <div class="text-base font-semibold">Embed Code</div>
+      <div class="text-base font-semibold">SSO Configuration</div>
       <p class="mb-0 text-left text-sm text-text-400">
 
       </p>
     </div>
   </a>
-  <a data-dropdown-sdks-menu="desktop" onfocus="document.body.setAttribute('data-sdk-menu', 'desktop')"
+ <!-- <a data-dropdown-sdks-menu="desktop" onfocus="document.body.setAttribute('data-sdk-menu', 'desktop')"
     onmouseover="document.body.setAttribute('data-sdk-menu', 'desktop')"
     class="flex cursor-pointer items-start justify-start gap-2 border-none bg-transparent text-black dark:text-white"
     href="/api/">
