--- a/src/snippets/sdks.html
+++ b/src/snippets/sdks.html
@@ -56,7 +56,7 @@
               </a>
               <!-- Nested List Begins Here -->
               <ul style="margin-left: 20px; list-style-type: circle;">
-                <li><a href="/Content-Manager/concepts">Concepts</a></li>
+                <li><a>Concepts</a></li>
                 <li><a href="/Digital-Experience-Manager">User Guides</a></li>
            
               </ul>
@@ -115,7 +115,7 @@
               </a>
               <!-- Nested List Begins Here -->
               <ul style="margin-left: 20px; list-style-type: circle;">
-                <li><a href="/Content-Manager/concepts">Concepts</a></li>
+                <li><a>Concepts</a></li>
                 <li><a href="/Audience-Manager/">User Guides</a></li>
            
               </ul>
