--- a/src/snippets/sdks.html
+++ b/src/snippets/sdks.html
@@ -58,6 +58,7 @@
               <ul style="margin-left: 20px; list-style-type: circle;">
                 <li><a>Concepts</a></li>
                 <li><a href="/Digital-Experience-Manager">User Guides</a></li>
+                <li><a href="https://blox-documentation-main-2.vercel.app/faq/Digital%20Experience%20Manager">FAQ</a></li>
            
               </ul>
             </li>
@@ -117,7 +118,7 @@
               <ul style="margin-left: 20px; list-style-type: circle;">
                 <li><a>Concepts</a></li>
                 <li><a href="/Audience-Manager/">User Guides</a></li>
-           
+                <li><a href="https://blox-documentation-main-2.vercel.app/faq/Audience%20Manager">FAQ</a></li>
               </ul>
             </li>
 
