--- a/src/snippets/Automation.html
+++ b/src/snippets/Automation.html
@@ -65,6 +65,7 @@
               <ul style="margin-left: 20px; list-style-type: circle;">
                 <li><a >Concepts</a></li>
                 <li><a >User Guide</a></li>
+                li><a >FAQ</a></li>
            
               </ul>
             </li>
