--- a/src/snippets/data.html
+++ b/src/snippets/data.html
@@ -12,7 +12,7 @@
       <a data-dropdown-sdks-menu="web" onfocus="document.body.setAttribute('data-sdk-menu', 'web')"
         onmouseover="document.body.setAttribute('data-sdk-menu', 'web')"
         class="flex cursor-pointer items-start justify-start gap-2 border-none bg-transparent text-black dark:text-white"
-        href="/Connectors-Manager">
+        href="/Content-Manager/">
         <div class="flex-shrink-0">
 
         </div>
