--- a/src/snippets/Automation.html
+++ b/src/snippets/Automation.html
@@ -66,7 +66,7 @@
               <ul style="margin-left: -4px; list-style-type: circle;">
                 <li><a style="color: grey;" href="">Concepts</a></li>
                 <li><a style="color: grey;" href="">User Guides</a></li>
-                <li><a style="color: grey;" href="/SSO">FAQ</a></li>
+                <li><a style="color: grey;" href="">FAQ</a></li>
            
               </ul>
             </li>
