--- a/src/snippets/Account.html
+++ b/src/snippets/Account.html
@@ -58,7 +58,7 @@
           <span class="none hidden text-sm font-normal lg:block">Video + Voice + Livestreaming + Chat</span> -->
           <ul class="sdk-ul">
             <li>
-              <a href="/Content-Manager" class="sdk-link">
+              <a href="/Account/Account-settings" class="sdk-link">
                 <img src="https://vueai.cdn.prismic.io/vueai/436f34cd-542c-4bd9-b99e-4a9aa9229071_sl-icon-a.svg?fit=max&w=64" />
                 Resources
               </a>
