--- a/src/snippets/Automation.html
+++ b/src/snippets/Automation.html
@@ -64,9 +64,9 @@
               </a>
              
               <ul style="margin-left: -4px; list-style-type: circle;">
-                <li><a style="color: grey;" href="">Concepts</a></li>
-                <li><a style="color: grey;" href="">User Guides</a></li>
-                <li><a style="color: grey;" href="">FAQ</a></li>
+                <li><a  href="https://blox-documentation-main-2.vercel.app/" style="color: grey;" href="">Concepts</a></li>
+                <li><a href="https://blox-documentation-main-2.vercel.app/" style="color: grey;" href="">User Guides</a></li>
+                <li><a href="https://blox-documentation-main-2.vercel.app/" style="color: grey;" href="">FAQ</a></li>
            
               </ul>
             </li>
